# Genesis-AI-Engine

./: .dockerignore  .gitignore  .railwayignore  CHANGELOG.md  CURSOR_AUTONOMY_RULES.md  Dockerfile  Genesis Launcher.spec  Genesis-test.spec  Genesis.spec  PROJECT_STATE.md  README.md  VECTOR_CAPABILITIES.md  VERSION  WHY.md  deploy.env.example  pyproject.toml  railway.toml  render.yaml
agents/: __init__.py  echo_agent.py
brain/: README.md  __init__.py  brain.py  config.py  models.py  queue.py
brand/: README.md
branding/: BRAND_GUIDELINES.md  COLOR_PALETTE.md  TYPOGRAPHY.md  design-tokens.json
client/: ARCHITECTURE.md  README.md
client/desktop/src-tauri/: Cargo.toml  tauri.conf.json
client/desktop/src-tauri/icons/: icon.icns
client/desktop/src-tauri/src/: lib.rs
config/: features.json
dashboard/: BETA_PREVIEW_SETUP.md  CEO_Domain_Setup_genesis-ai-engine.com.md  CEO_Resend_Cloudflare_Steps.md  Corporate_Email_Mission1_Runbook.md  Domain_Selection_Mission1.md  First_Customer_Plan_v1.md  Genesis_AI_Hub_Architecture_v1.md  Genesis_Brand_CEO_Approval_Report_2026-07-04.md  Genesis_Brand_Guidelines_v1.md  Genesis_Brand_v1_FROZEN.md  Genesis_Business_Launch_Gate_v1.md  Genesis_Business_Plan_v2.md  Genesis_Business_Units_Strategy.md  Genesis_CEO_Mandate_Reality_First_v1.md  Genesis_Client_Foundation.md  Genesis_Competitive_Advantage_v1.md  Genesis_Competitive_Analysis_v1.md  Genesis_Consumer_Platform_Foundation_v1.md  Genesis_Desktop_Reality_Audit_2026-07-04.md  Genesis_Dev_Studio_Stage2_Panels_v1.md  Genesis_Development_Policy.md  Genesis_Hybrid_AI_Strategy_v1.md  (+37 more)
(+1814 files in other folders)
