[project]
name = "genesis-ai-engine"
version = "0.1.0"
description = "Genesis ABOS — Autonomous Business Operating System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kernel*", "agents*", "brain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
